# climate_sensor

./: README.md
front/: README.md  index.html  package-lock.json  package.json
front/src/: main.js
front/src/components/: Login.vue  Sensors.vue
front/src/router/: index.js
rest_api/: Cargo.toml
rest_api/src/: main.rs
rest_api/src/databases/: sensors.rs
rest_api/src/handlers/: mod.rs  sensor.rs  user.rs
rest_api/src/models/: sensor.rs
rest_api/src/sensors/: database.rs  mod.rs  model.rs
