[package]
name = "rest_api"
version = "0.1.0"
authors = ["Rafael <rvillegasm@eafit.edu.co>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = {verision = "0.4.2", default_features = false}
mongodb = "0.9.1"
bson = "0.14.0"
serde =  { version = "1.0.104", features = ["derive"] }

[dependencies.rocket_contrib]
version = "0.4.2"
default-features = false
features = ["json"]